--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "mongoose": "^6.0.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
     "request-promise": "^4.2.6"
@@ -14,6 +15,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
